--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ mkdocs-material==9.5.*
 mkdocs-jupyter==0.24.*
 mkdocs-macros-plugin==1.*
 mistune==3.0.*
+mkdocs-git-revision-date-localized-plugin==1.2.*
