--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
           - Languages:
               - Python: hpc/software/languages/python.md
               - Julia: hpc/software/languages/julia.md
+              - R: hpc/software/languages/R.md
           - MPI:
               - Open MPI: hpc/software/mpi/openmpi.md
               - Intel MPI: hpc/software/mpi/intelmpi.md
