use github secrets to store google analytics key

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,7 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install --upgrade -r requirements.txt
-      - run: mkdocs gh-deploy --force
+      - name: Build and deploy
+        env:
+          GOOGLE_ANALYTICS_KEY: ${{ secrets.GOOGLE_ANALYTICS_KEY }}
+        run: mkdocs gh-deploy --force
