--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,9 @@ nav:
               - Python: hpc/software/languages/python.md
               - Julia: hpc/software/languages/julia.md
               - R: hpc/software/languages/R.md
+          - Machine Learning:
+              - PyTorch: hpc/software/ml/pytorch.md
+              - TensorFlow: hpc/software/ml/tensorflow.md
           - MPI:
               - Open MPI: hpc/software/mpi/openmpi.md
               - Intel MPI: hpc/software/mpi/intelmpi.md
