added alphafold file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
           - Machine Learning:
               - PyTorch: hpc/software/ml/pytorch.md
               - TensorFlow: hpc/software/ml/tensorflow.md
+              - Alphafold3: hpc/software/ml/alphafold3.md
           - MPI:
               - Open MPI: hpc/software/mpi/openmpi.md
               - Intel MPI: hpc/software/mpi/intelmpi.md
