--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,11 @@ nav:
       - Globus for Google Drive: data/globus-google-drive.md
       - Using the Globus AWS S3 Connector: data/globus-aws-s3-connector.md
       - Using the Globus Google Cloud Storage Connector: data/globus-google-cloud-storage-connector.md
+  - Cloud Services:
+     - Cloud Services: cloud/index.md
+     - Cloud Service Providers:
+         - Amazon Web Services: cloud/aws.md
+         - Google Cloud Platform: cloud/gcp.md
   - Support & Training:
       - HPC Help Desk: help.md
 
@@ -109,6 +114,7 @@ theme:
     - navigation.footer
     - navigation.indexes
     - navigation.tabs
+    - navigation.tabs.sticky
 
 markdown_extensions:
   - admonition
