--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,8 @@ nav:
               - NetCDF: hpc/software/libraries/netcdf.md
               - MKL: hpc/software/libraries/mkl.md
               - CUDA: hpc/software/libraries/cuda.md
+          - LLMs: 
+              - Ollama: hpc/software/llms/ollama.md
       - Running Jobs:
           - Slurm Overview: hpc/running/slurm-overview.md
           - Example Scripts: hpc/running/script-examples.md
